force-app/main/default/objects/Account/fields/Available_Courses__c.field-meta.xml
<CustomField>
    <fullName>Available_Courses__c</fullName>
    <label>Available Courses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Hospital Administration</fullName>
            </value>
            <value>
                <fullName>Public Administration</fullName>
            </value>
            <value>
                <fullName>Agribusiness</fullName>
            </value>
            <value>
                <fullName>Agroindustry</fullName>
            </value>
            <value>
                <fullName>Agronomy</fullName>
            </value>
            <value>
                <fullName>Animation</fullName>
            </value>
            <value>
                <fullName>Anthropology</fullName>
            </value>
            <value>
                <fullName>Systems Analysis and Development</fullName>
            </value>
            <value>
                <fullName>Architecture and Urbanism</fullName>
            </value>
            <value>
                <fullName>Arts</fullName>
            </value>
            <value>
                <fullName>Graphic Arts</fullName>
            </value>
            <value>
                <fullName>Plastic Arts</fullName>
            </value>
            <value>
                <fullName>Visual Arts</fullName>
            </value>
            <value>
                <fullName>Industrial Automation</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Librarianship</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Biomedicine</fullName>
            </value>
            <value>
                <fullName>Cinema</fullName>
            </value>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Information Science</fullName>
            </value>
            <value>
                <fullName>Accounting Sciences</fullName>
            </value>
            <value>
                <fullName>Social Sciences</fullName>
            </value>
            <value>
                <fullName>Institutional Communication</fullName>
            </value>
            <value>
                <fullName>Social Communication</fullName>
            </value>
            <value>
                <fullName>Civil Construction</fullName>
            </value>
            <value>
                <fullName>Graphic Creation</fullName>
            </value>
            <value>
                <fullName>Dance</fullName>
            </value>
            <value>
                <fullName>Industrial Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>