force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <inlineHelpText>CNPJ is the Cadastro Nacional da Pessoa Jurídica. The Brazil National Registry of Legal Entities number.</inlineHelpText>
    <label>CNPJ3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>