force-app/main/default/objects/Account/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>+10,000 employees</fullName>
            </value>
            <value>
                <fullName>5,001 - 10,000 employees</fullName>
            </value>
            <value>
                <fullName>1,001 - 5,000 employees</fullName>
            </value>
            <value>
                <fullName>501 - 1,000 employees</fullName>
            </value>
            <value>
                <fullName>201 - 500 employees</fullName>
            </value>
            <value>
                <fullName>51 - 200 employees</fullName>
            </value>
            <value>
                <fullName>Up to 50 employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>