force-app/main/default/objects/Account/fields/Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance__c</fullName>
    <label>Health Insurance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Health_Insurance_Global_Value_Set</valueSetName>
    </valueSet>
</CustomField>