force-app/main/default/objects/Account/fields/Website_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Website_Social_Media__c</fullName>
    <label>Website/Social Media</label>
    <length>20</length>
    <type>Text</type>
</CustomField>