force-app/main/default/objects/Account/fields/Women_Representatives__c.field-meta.xml
<CustomField>
    <fullName>Women_Representatives__c</fullName>
    <label>Women Representatives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>