force-app/main/default/objects/Account/validationRules/CNPJ_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>CNPJ_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR( ISBLANK( CNPJ__c ) ,REGEX(CNPJ__c ,&quot;[0-9]{2}.[0-9]{3}.[0-9]{3}/[0-9]{4}-[0-9]{2}&quot;) ))</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>Please check the format of CNPJ.
Format should be in nn.nnn.nnn/nnnn-nn where n is any number 0 to 9</errorMessage>
</ValidationRule>