force-app/main/default/objects/Account/validationRules/Zip_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Code_Format</fullName>
    <active>true</active>
    <description>For Ca Entre nos User, Zip Code should be in a specified format.</description>
    <errorConditionFormula>AND(  $UserRole.DeveloperName = &apos;Ca_Entre_Nos_User&apos;,
NOT( OR( ISBLANK( BillingPostalCode ) ,REGEX(BillingPostalCode ,&quot;[0-9]{5}-[0-9]{3}&quot;) )))</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Please Check the format of Zip Code.
Format Should be in nnnnn-nnn where n is any number 0 to 9</errorMessage>
</ValidationRule>